# weather-checker

./: Cargo.toml
src/: checker.rs  lib.rs  main.rs  notifier.rs  rpc.rs
