[package]
name = "weather-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
chrono = { version = "0.4.44", features = ["serde"] }
lapin = "4.1.1"
async-rs = "0.8.0"
futures-lite = "2.6.1"
anyhow = "1.0.102"
